// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UnitInputField > should handles onChange and selection 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.25rem;
}

.emotion-4 {
  cursor: pointer;
}

.emotion-6 {
  width: 100%;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-6:not([data-disabled='true']):not([data-readonly='true']):not(
      [data-success='true']
    ):not([data-error='true']):focus,
.emotion-6:not([data-disabled='true']):not([data-readonly='true']):not(
      [data-success='true']
    ):not([data-error='true']):active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  border-color: #792dd4;
}

.emotion-6:not([data-disabled='true']):not([data-readonly='true']):not(
      [data-success='true']
    ):not([data-error='true']):focus>.emotion-9,
.emotion-6:not([data-disabled='true']):not([data-readonly='true']):not(
      [data-success='true']
    ):not([data-error='true']):active>.emotion-9 {
  border-right-color: #8c40ef;
}

.emotion-6:not([data-disabled='true']):not([data-readonly='true']):not(
      [data-success='true']
    ):not([data-error='true']):focus-within {
  border-color: #792dd4;
}

.emotion-6:not([data-disabled='true']):not([data-readonly='true']):not(
      [data-success='true']
    ):not([data-error='true']):focus-within>.emotion-9 {
  border-right-color: #8c40ef;
}

.emotion-6:not([data-disabled='true']):not([data-error='true']):not(
      [data-success='true']
    ):not([data-readonly='true']):hover,
.emotion-6:not([data-disabled='true']):not([data-error='true']):not(
      [data-success='true']
    ):focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: #8c40ef;
}

.emotion-6:not([data-disabled='true']):not([data-error='true']):not(
      [data-success='true']
    ):not([data-readonly='true']):hover>.emotion-9,
.emotion-6:not([data-disabled='true']):not([data-error='true']):not(
      [data-success='true']
    ):focus>.emotion-9 {
  border-right-color: #8c40ef;
}

.emotion-6[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
  cursor: default;
}

.emotion-6[data-readonly='true']:active {
  border-color: #d9dadd;
}

.emotion-6[data-size='small'] {
  height: 2rem;
}

.emotion-6[data-size='medium'] {
  height: 2.5rem;
}

.emotion-6[data-size='large'] {
  height: 3rem;
}

.emotion-6[data-success='true'] {
  border: 1px solid #22674e;
}

.emotion-6[data-success='true']>.emotion-9 {
  border-right-color: #22674e;
}

.emotion-6[data-success='true']:active {
  border: 1px solid #22674e;
  box-shadow: 0px 0px 0px 3px #45d19f40;
}

.emotion-6[data-success='true']:active>.emotion-9 {
  border-right-color: #22674e;
}

.emotion-6[data-error='true'] {
  border: 1px solid #b3144d;
}

.emotion-6[data-error='true']>.emotion-9 {
  border-right-color: #b3144d;
}

.emotion-6[data-error='true']>.emotion-9:hover {
  border-right-color: #b3144d;
}

.emotion-6[data-error='true']:active {
  border: 1px solid #b3144d;
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-6[data-error='true']:active>.emotion-9 {
  border-right-color: #b3144d;
}

.emotion-6[data-error='true']:active>.emotion-9:hover {
  border-right-color: #b3144d;
}

.emotion-6[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
  cursor: not-allowed;
}

.emotion-6[data-disabled='true']>.emotion-9 {
  border-right-color: #e9eaeb;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding-right: 1rem;
  border-right: 1px solid #d9dadd;
  width: 100%;
  height: 100%;
}

.emotion-10 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  padding-left: 1rem;
  background: transparent;
  color: #3f4250;
}

.emotion-10[data-size="small"] {
  padding-left: 0.5rem;
}

.emotion-10[data-size="large"] {
  font-size: 1rem;
}

.emotion-10::-webkit-input-placeholder {
  color: #727683;
}

.emotion-10::-moz-placeholder {
  color: #727683;
}

.emotion-10:-ms-input-placeholder {
  color: #727683;
}

.emotion-10::placeholder {
  color: #727683;
}

.emotion-10:disabled {
  cursor: not-allowed;
}

.emotion-10:disabled::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-10:disabled::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-10:disabled:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-10:disabled::placeholder {
  color: #b5b7bd;
}

.emotion-13 {
  width: 100%;
  width: 12.6rem;
}

.emotion-13 #unit {
  border: none;
  background: transparent;
}

.emotion-13 #unit:focus,
.emotion-13 #unit:active {
  box-shadow: none;
}

.emotion-17 {
  display: grid;
  width: 100%;
  gap: 0.5rem;
  grid-template-columns: 1fr auto;
  padding: 0.5rem;
  padding-right: 0;
  padding-left: 1rem;
  cursor: pointer;
  box-shadow: none;
  background: #ffffff;
  border-radius: 0.25rem;
  width: 100%;
}

.emotion-17[data-size='small'] {
  height: 2rem;
  padding-left: 0.5rem;
}

.emotion-17[data-size='medium'] {
  height: 2.5rem;
}

.emotion-17[data-size='large'] {
  height: 3rem;
}

.emotion-17[data-state='neutral'] {
  border: 1px solid #d9dadd;
}

.emotion-17[data-state='neutral']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #792dd4;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-17[data-state='neutral']:not([data-disabled='true']):hover {
  border-color: #792dd4;
  outline: none;
}

.emotion-17[data-state='neutral']:not([data-disabled='true']):focus-visible {
  outline: 5px auto Highlight;
  outline: 5px auto -webkit-focus-ring-color;
}

.emotion-17[data-state='neutral'][data-dropdownvisible='true'] {
  border-color: #792dd4;
}

.emotion-17[data-state='success'] {
  border: 1px solid #22674e;
}

.emotion-17[data-state='success']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #1b533f;
  box-shadow: 0px 0px 0px 3px #45d19f40;
}

.emotion-17[data-state='success'][data-dropdownvisible='true'] {
  border-color: #1b533f;
}

.emotion-17[data-state='danger'] {
  border: 1px solid #b3144d;
}

.emotion-17[data-state='danger']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #92103f;
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-17[data-state='danger'][data-dropdownvisible='true'] {
  border-color: #92103f;
}

.emotion-17:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-17[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
  cursor: default;
}

.emotion-17[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
  cursor: not-allowed;
}

.emotion-19 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  padding-right: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-23 {
  vertical-align: middle;
  fill: #3f4250;
  height: 1rem;
  width: 1rem;
  min-width: 1rem;
  min-height: 1rem;
}

.emotion-23 .fillStroke {
  stroke: #3f4250;
  fill: none;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="emotion-0 emotion-1"
      >
        <div
          class="emotion-2 emotion-1"
        >
          <label
            class="emotion-4 emotion-5 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            for="«r7»"
          >
            Test
          </label>
          <span
            class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owd uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow1k uv_m4c9ow3c"
          >
            *
          </span>
        </div>
        <div
          class="emotion-6 emotion-7 uv_x6hyh50 "
          style="--uv_3mg8xe0: 1fr auto; --uv_3mg8xe1: 1fr auto; --uv_3mg8xe2: 1fr auto; --uv_3mg8xe3: 1fr auto; --uv_3mg8xe4: 1fr auto; --uv_3mg8xe5: 1fr auto;"
        >
          <div
            class="emotion-8 emotion-9"
            id="input-field"
          >
            <input
              aria-invalid="false"
              class="emotion-10 emotion-11"
              data-size="large"
              data-testid="unit-input"
              id="«r7»"
              max="9007199254740991"
              min="0"
              name="test-value"
              placeholder="input"
              required=""
              step="1"
              type="number"
              value="100"
            />
          </div>
          <div
            aria-label="test-unit"
            class="emotion-12 emotion-13 emotion-14"
          >
            <div
              aria-controls="«rb»"
              aria-describedby="«rb»"
              class="uv_w40vpo9 uv_w40vpob"
              tabindex="-1"
            >
              <div
                class="emotion-0 emotion-1"
              >
                <div
                  aria-controls="«rb»"
                  aria-expanded="false"
                  class="emotion-17 emotion-18"
                  data-disabled="false"
                  data-dropdownvisible="false"
                  data-readonly="false"
                  data-size="large"
                  data-state="neutral"
                  data-testid="select-input-test-unit"
                  id="unit"
                  role="combobox"
                  tabindex="0"
                >
                  <div
                    class="emotion-19 emotion-20 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                  >
                    Days
                  </div>
                  <div
                    class="emotion-21 emotion-22"
                  >
                    <svg
                      aria-label="show dropdown"
                      class="emotion-23 emotion-24"
                      viewBox="0 0 16 16"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        class="uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe6 uv_e1wcoek uv_e1wcoeg uv_e1wcoe7 uv_e1wcoel"
        type="submit"
      >
        Submit
      </button>
    </form>
  </div>
</DocumentFragment>
`;

exports[`UnitInputField > should render correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-2 {
  cursor: pointer;
}

.emotion-4 {
  width: 100%;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-4:not([data-disabled='true']):not([data-readonly='true']):not(
      [data-success='true']
    ):not([data-error='true']):focus,
.emotion-4:not([data-disabled='true']):not([data-readonly='true']):not(
      [data-success='true']
    ):not([data-error='true']):active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  border-color: #792dd4;
}

.emotion-4:not([data-disabled='true']):not([data-readonly='true']):not(
      [data-success='true']
    ):not([data-error='true']):focus>.emotion-7,
.emotion-4:not([data-disabled='true']):not([data-readonly='true']):not(
      [data-success='true']
    ):not([data-error='true']):active>.emotion-7 {
  border-right-color: #8c40ef;
}

.emotion-4:not([data-disabled='true']):not([data-readonly='true']):not(
      [data-success='true']
    ):not([data-error='true']):focus-within {
  border-color: #792dd4;
}

.emotion-4:not([data-disabled='true']):not([data-readonly='true']):not(
      [data-success='true']
    ):not([data-error='true']):focus-within>.emotion-7 {
  border-right-color: #8c40ef;
}

.emotion-4:not([data-disabled='true']):not([data-error='true']):not(
      [data-success='true']
    ):not([data-readonly='true']):hover,
.emotion-4:not([data-disabled='true']):not([data-error='true']):not(
      [data-success='true']
    ):focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: #8c40ef;
}

.emotion-4:not([data-disabled='true']):not([data-error='true']):not(
      [data-success='true']
    ):not([data-readonly='true']):hover>.emotion-7,
.emotion-4:not([data-disabled='true']):not([data-error='true']):not(
      [data-success='true']
    ):focus>.emotion-7 {
  border-right-color: #8c40ef;
}

.emotion-4[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
  cursor: default;
}

.emotion-4[data-readonly='true']:active {
  border-color: #d9dadd;
}

.emotion-4[data-size='small'] {
  height: 2rem;
}

.emotion-4[data-size='medium'] {
  height: 2.5rem;
}

.emotion-4[data-size='large'] {
  height: 3rem;
}

.emotion-4[data-success='true'] {
  border: 1px solid #22674e;
}

.emotion-4[data-success='true']>.emotion-7 {
  border-right-color: #22674e;
}

.emotion-4[data-success='true']:active {
  border: 1px solid #22674e;
  box-shadow: 0px 0px 0px 3px #45d19f40;
}

.emotion-4[data-success='true']:active>.emotion-7 {
  border-right-color: #22674e;
}

.emotion-4[data-error='true'] {
  border: 1px solid #b3144d;
}

.emotion-4[data-error='true']>.emotion-7 {
  border-right-color: #b3144d;
}

.emotion-4[data-error='true']>.emotion-7:hover {
  border-right-color: #b3144d;
}

.emotion-4[data-error='true']:active {
  border: 1px solid #b3144d;
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-4[data-error='true']:active>.emotion-7 {
  border-right-color: #b3144d;
}

.emotion-4[data-error='true']:active>.emotion-7:hover {
  border-right-color: #b3144d;
}

.emotion-4[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
  cursor: not-allowed;
}

.emotion-4[data-disabled='true']>.emotion-7 {
  border-right-color: #e9eaeb;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding-right: 1rem;
  border-right: 1px solid #d9dadd;
  width: 100%;
  height: 100%;
}

.emotion-8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  padding-left: 1rem;
  background: transparent;
  color: #3f4250;
}

.emotion-8[data-size="small"] {
  padding-left: 0.5rem;
}

.emotion-8[data-size="large"] {
  font-size: 1rem;
}

.emotion-8::-webkit-input-placeholder {
  color: #727683;
}

.emotion-8::-moz-placeholder {
  color: #727683;
}

.emotion-8:-ms-input-placeholder {
  color: #727683;
}

.emotion-8::placeholder {
  color: #727683;
}

.emotion-8:disabled {
  cursor: not-allowed;
}

.emotion-8:disabled::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-8:disabled::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-8:disabled:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-8:disabled::placeholder {
  color: #b5b7bd;
}

.emotion-11 {
  width: 100%;
  width: 12.6rem;
}

.emotion-11 #unit {
  border: none;
  background: transparent;
}

.emotion-11 #unit:focus,
.emotion-11 #unit:active {
  box-shadow: none;
}

.emotion-15 {
  display: grid;
  width: 100%;
  gap: 0.5rem;
  grid-template-columns: 1fr auto;
  padding: 0.5rem;
  padding-right: 0;
  padding-left: 1rem;
  cursor: pointer;
  box-shadow: none;
  background: #ffffff;
  border-radius: 0.25rem;
  width: 100%;
}

.emotion-15[data-size='small'] {
  height: 2rem;
  padding-left: 0.5rem;
}

.emotion-15[data-size='medium'] {
  height: 2.5rem;
}

.emotion-15[data-size='large'] {
  height: 3rem;
}

.emotion-15[data-state='neutral'] {
  border: 1px solid #d9dadd;
}

.emotion-15[data-state='neutral']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #792dd4;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-15[data-state='neutral']:not([data-disabled='true']):hover {
  border-color: #792dd4;
  outline: none;
}

.emotion-15[data-state='neutral']:not([data-disabled='true']):focus-visible {
  outline: 5px auto Highlight;
  outline: 5px auto -webkit-focus-ring-color;
}

.emotion-15[data-state='neutral'][data-dropdownvisible='true'] {
  border-color: #792dd4;
}

.emotion-15[data-state='success'] {
  border: 1px solid #22674e;
}

.emotion-15[data-state='success']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #1b533f;
  box-shadow: 0px 0px 0px 3px #45d19f40;
}

.emotion-15[data-state='success'][data-dropdownvisible='true'] {
  border-color: #1b533f;
}

.emotion-15[data-state='danger'] {
  border: 1px solid #b3144d;
}

.emotion-15[data-state='danger']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #92103f;
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-15[data-state='danger'][data-dropdownvisible='true'] {
  border-color: #92103f;
}

.emotion-15:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-15[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
  cursor: default;
}

.emotion-15[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
  cursor: not-allowed;
}

.emotion-17 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  padding-right: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-21 {
  vertical-align: middle;
  fill: #3f4250;
  height: 1rem;
  width: 1rem;
  min-width: 1rem;
  min-height: 1rem;
}

.emotion-21 .fillStroke {
  stroke: #3f4250;
  fill: none;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="emotion-0 emotion-1"
      >
        <label
          class="emotion-2 emotion-3 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
          for="«r0»"
        >
          Test
        </label>
        <div
          class="emotion-4 emotion-5 uv_x6hyh50 "
          style="--uv_3mg8xe0: 1fr auto; --uv_3mg8xe1: 1fr auto; --uv_3mg8xe2: 1fr auto; --uv_3mg8xe3: 1fr auto; --uv_3mg8xe4: 1fr auto; --uv_3mg8xe5: 1fr auto;"
        >
          <div
            class="emotion-6 emotion-7"
            id="input-field"
          >
            <input
              aria-invalid="false"
              class="emotion-8 emotion-9"
              data-size="large"
              data-testid="unit-input"
              id="«r0»"
              max="9007199254740991"
              min="0"
              name="test-value"
              placeholder="0"
              step="1"
              type="number"
            />
          </div>
          <div
            aria-label="test-unit"
            class="emotion-10 emotion-11 emotion-12"
          >
            <div
              aria-controls="«r3»"
              aria-describedby="«r3»"
              class="uv_w40vpo9 uv_w40vpob"
              tabindex="-1"
            >
              <div
                class="emotion-0 emotion-1"
              >
                <div
                  aria-controls="«r3»"
                  aria-expanded="false"
                  class="emotion-15 emotion-16"
                  data-disabled="false"
                  data-dropdownvisible="false"
                  data-readonly="false"
                  data-size="large"
                  data-state="neutral"
                  data-testid="select-input-test-unit"
                  id="unit"
                  role="combobox"
                  tabindex="0"
                >
                  <p
                    class="emotion-17 emotion-18 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owm uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
                  >
                    Select item
                  </p>
                  <div
                    class="emotion-19 emotion-20"
                  >
                    <svg
                      aria-label="show dropdown"
                      class="emotion-21 emotion-22"
                      viewBox="0 0 16 16"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
